responsie page overflow bug fixed

--- a/styles/passwordRestore.css
+++ b/styles/passwordRestore.css
@@ -20,8 +20,8 @@ justify-content: space-around;    min-height: 70vh;
     color: aliceblue;
     border-radius: 10px;
     padding: 30px;
-    margin: 100px 0px;
-    
+    margin: 100px 1px;
+     
 
 }
 
